fix bulgarian translation

--- a/bg/LC_MESSAGES/ckan.po
+++ b/bg/LC_MESSAGES/ckan.po
@@ -1973,7 +1973,7 @@ msgid ""
 "[3:publicly-funded art] in Seattle? Data to answer many, many questions like"
 " these is out there on the Internet somewhere - but it is not always easy to"
 " find."
-msgstr "Каква е била[1: средната цена на къща] във Великобритания през 1935 г.? Кога ще се очаква населението на Индия [2 да застигне] това на Китай? Къде можете да видите [3: публично финансирано изкуството] в Сиатъл? Данните, за да се отговори на много, много въпроси, като тези, са някъде в интернет, но не винаги е лесно да се намери."
+msgstr "Каква е била[1: средната цена на къща] във Великобритания през 1935 г.? Кога ще се очаква населението на Индия [2: да застигне] това на Китай? Къде можете да видите [3: публично финансирано изкуството] в Сиатъл? Данните, за да се отговори на много, много въпроси, като тези, са някъде в интернет, но не винаги е лесно да се намери."
 
 #: ckan/templates/home/about.html:15
 #, python-format
