--- a/zh_TW/LC_MESSAGES/ckan.po
+++ b/zh_TW/LC_MESSAGES/ckan.po
@@ -10,13 +10,13 @@ msgstr ""
 "POT-Creation-Date: 2012-03-16 14:49+0000\n"
 "PO-Revision-Date: 2012-03-16 14:59+0000\n"
 "Last-Translator: Sean Hammond <sean.hammond@okfn.org>\n"
-"Language-Team: Romanian (http://www.transifex.net/projects/p/ckan/language/ro/)\n"
+"Language-Team: Chinese (Taiwan) (http://www.transifex.net/projects/p/ckan/language/zh_TW/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 0.9.6\n"
-"Language: ro\n"
-"Plural-Forms: nplurals=3; plural=(n==1?0:(((n%100>19)||((n%100==0)&&(n!=0)))?2:1))\n"
+"Language: zh_TW\n"
+"Plural-Forms: nplurals=1; plural=0\n"
 
 #: ckanext/stats/templates/ckanext/stats/index.html:6
 #: ckanext/stats/templates/ckanext/stats/index.html:8
