--- a/es/LC_MESSAGES/ckan.po
+++ b/es/LC_MESSAGES/ckan.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: CKAN\n"
 "Report-Msgid-Bugs-To: http://trac.ckan.org/\n"
 "POT-Creation-Date: 2012-04-26 14:49+0200\n"
-"PO-Revision-Date: 2012-04-29 18:47+0000\n"
+"PO-Revision-Date: 2012-05-01 21:40+0000\n"
 "Last-Translator: amercader <amercadero@gmail.com>\n"
 "Language-Team: Spanish (Castilian) (http://www.transifex.net/projects/p/ckan/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -1764,7 +1764,7 @@ msgstr "Aquí puedes usar %aformato Markdown%b."
 #: ckan/templates/js_strings.html:69
 msgid ""
 "Should a %aDataStore table and Data API%b be enabled for this resource?"
-msgstr "¿Quieres habilitar una tabla de %aDataStore y la API%b de datos para este recurso?"
+msgstr "¿Quieres habilitar %auna tabla de DataStore y la API de datos%b para este recurso?"
 
 #: ckan/templates/js_strings.html:70
 #, python-format
