--- a/sk/LC_MESSAGES/ckan.po
+++ b/sk/LC_MESSAGES/ckan.po
@@ -14,8 +14,8 @@ msgstr ""
 "Project-Id-Version: CKAN\n"
 "Report-Msgid-Bugs-To: http://trac.ckan.org/\n"
 "POT-Creation-Date: 2012-04-26 14:49+0200\n"
-"PO-Revision-Date: 2012-04-30 08:22+0000\n"
-"Last-Translator: KUSROS <matej.uhlik@vlada.gov.sk>\n"
+"PO-Revision-Date: 2012-04-30 12:07+0000\n"
+"Last-Translator: Jakub Kapus <jakub.kapus@vlada.gov.sk>\n"
 "Language-Team: Slovak (http://www.transifex.net/projects/p/ckan/language/sk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1807,7 +1807,7 @@ msgstr "Hľadať"
 #: ckan/templates/home/about.html:9 ckan/templates/user/edit_user_form.html:39
 #: ckan/templates/user/read.html:28
 msgid "About"
-msgstr "O"
+msgstr "O projekte"
 
 #: ckan/templates/layout_base.html:94
 msgid "Page Logo"
@@ -2414,7 +2414,7 @@ msgstr "obsahuje"
 
 #: ckan/templates/home/index.html:24
 msgid "datasets"
-msgstr "datasety"
+msgstr "datasetov"
 
 #: ckan/templates/home/index.html:24
 msgid ""
