[i18n] Remove no "no-sidebar" translations from all languages
Change was made on Transifex and pulled into git

--- a/hu/LC_MESSAGES/ckan.po
+++ b/hu/LC_MESSAGES/ckan.po
@@ -7,6 +7,7 @@
 # Kalman Kemenczy <kkemenczy@gmail.com>, 2011.
 # <kitzinger@gmail.com>, 2012.
 # okfn <sysadmin@okfn.org>, 2011.
+# Sean Hammond <sean.hammond@okfn.org>, 2012.
 # <stefan.marsiske@gmail.com>, 2011.
 # stf <stefan.marsiske@gmail.com>, 2011.
 msgid ""
@@ -14,7 +15,7 @@ msgstr ""
 "Project-Id-Version: CKAN\n"
 "Report-Msgid-Bugs-To: http://trac.ckan.org/\n"
 "POT-Creation-Date: 2012-04-26 14:49+0200\n"
-"PO-Revision-Date: 2012-04-26 12:15+0000\n"
+"PO-Revision-Date: 2012-05-09 11:10+0000\n"
 "Last-Translator: Sean Hammond <sean.hammond@okfn.org>\n"
 "Language-Team: Hungarian (http://www.transifex.net/projects/p/ckan/language/hu/)\n"
 "MIME-Version: 1.0\n"
@@ -2147,7 +2148,7 @@ msgstr ""
 #: ckan/templates/package/related_list.html:14
 #: ckan/templates/revision/diff.html:6 ckan/templates/revision/list.html:7
 msgid "no-sidebar"
-msgstr ""
+msgstr "no-sidebar"
 
 #: ckan/templates/group/edit_form.html:10
 #: ckan/templates/group/new_group_form.html:101
