--- a/it/LC_MESSAGES/ckan.po
+++ b/it/LC_MESSAGES/ckan.po
@@ -6,13 +6,14 @@
 # <internet@davidread.org>, 2011.
 # <lafuga2@gmail.com>, 2012.
 # Maurizio Napolitano <maurizio.napolitano@okfn.org>, 2011, 2012.
+# Sean Hammond <sean.hammond@okfn.org>, 2012.
 # Stefano Costa <steko@iosa.it>, 2011, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: CKAN\n"
 "Report-Msgid-Bugs-To: http://trac.ckan.org/\n"
 "POT-Creation-Date: 2012-04-26 14:49+0200\n"
-"PO-Revision-Date: 2012-04-26 12:14+0000\n"
+"PO-Revision-Date: 2012-05-09 11:08+0000\n"
 "Last-Translator: Sean Hammond <sean.hammond@okfn.org>\n"
 "Language-Team: Italian (http://www.transifex.net/projects/p/ckan/language/it/)\n"
 "MIME-Version: 1.0\n"
@@ -2145,7 +2146,7 @@ msgstr "Aggiorna i ruoli disponibili per i gruppi di utenti"
 #: ckan/templates/package/related_list.html:14
 #: ckan/templates/revision/diff.html:6 ckan/templates/revision/list.html:7
 msgid "no-sidebar"
-msgstr ""
+msgstr "no-sidebar"
 
 #: ckan/templates/group/edit_form.html:10
 #: ckan/templates/group/new_group_form.html:101
