--- a/lv/LC_MESSAGES/ckan.po
+++ b/lv/LC_MESSAGES/ckan.po
@@ -4,12 +4,13 @@
 # 
 # Translators:
 # Karlis  <karlisr@yahoo.com>, 2012.
+# Sean Hammond <sean.hammond@okfn.org>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: CKAN\n"
 "Report-Msgid-Bugs-To: http://trac.ckan.org/\n"
 "POT-Creation-Date: 2012-04-26 14:49+0200\n"
-"PO-Revision-Date: 2012-04-26 12:15+0000\n"
+"PO-Revision-Date: 2012-05-09 11:08+0000\n"
 "Last-Translator: Sean Hammond <sean.hammond@okfn.org>\n"
 "Language-Team: Latvian (http://www.transifex.net/projects/p/ckan/language/lv/)\n"
 "MIME-Version: 1.0\n"
@@ -2142,7 +2143,7 @@ msgstr ""
 #: ckan/templates/package/related_list.html:14
 #: ckan/templates/revision/diff.html:6 ckan/templates/revision/list.html:7
 msgid "no-sidebar"
-msgstr ""
+msgstr "no-sidebar"
 
 #: ckan/templates/group/edit_form.html:10
 #: ckan/templates/group/new_group_form.html:101
