--- a/nl/LC_MESSAGES/ckan.po
+++ b/nl/LC_MESSAGES/ckan.po
@@ -7,13 +7,14 @@
 # <egon.willighagen@gmail.com>, 2012.
 # <internet@davidread.org>, 2011.
 # OpenDataBaas <paul@oller.nl>, 2011.
+# Sean Hammond <sean.hammond@okfn.org>, 2012.
 # TonZijlstra <ton.zijlstra@gmail.com>, 2011.
 msgid ""
 msgstr ""
 "Project-Id-Version: CKAN\n"
 "Report-Msgid-Bugs-To: http://trac.ckan.org/\n"
 "POT-Creation-Date: 2012-04-26 14:49+0200\n"
-"PO-Revision-Date: 2012-04-26 12:15+0000\n"
+"PO-Revision-Date: 2012-05-09 11:25+0000\n"
 "Last-Translator: Sean Hammond <sean.hammond@okfn.org>\n"
 "Language-Team: Dutch (http://www.transifex.net/projects/p/ckan/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -2146,7 +2147,7 @@ msgstr "Wijzig bestaande rollen voor autorisatiegroepen"
 #: ckan/templates/package/related_list.html:14
 #: ckan/templates/revision/diff.html:6 ckan/templates/revision/list.html:7
 msgid "no-sidebar"
-msgstr "geen-sidebar"
+msgstr "no-sidebar"
 
 #: ckan/templates/group/edit_form.html:10
 #: ckan/templates/group/new_group_form.html:101
