--- a/no/LC_MESSAGES/ckan.po
+++ b/no/LC_MESSAGES/ckan.po
@@ -8,12 +8,13 @@
 # <olav.ovrebo@gmail.com>, 2011.
 # oovrebo <olav.ovrebo@gmail.com>, 2011.
 # relet  <thomas.hirsch@gmail.com>, 2012.
+# Sean Hammond <sean.hammond@okfn.org>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: CKAN\n"
 "Report-Msgid-Bugs-To: http://trac.ckan.org/\n"
 "POT-Creation-Date: 2012-04-26 14:49+0200\n"
-"PO-Revision-Date: 2012-04-26 12:15+0000\n"
+"PO-Revision-Date: 2012-05-09 11:12+0000\n"
 "Last-Translator: Sean Hammond <sean.hammond@okfn.org>\n"
 "Language-Team: Norwegian (http://www.transifex.net/projects/p/ckan/language/no/)\n"
 "MIME-Version: 1.0\n"
@@ -2146,7 +2147,7 @@ msgstr "Oppdater eksisterende roller for autoriseringsgrupper"
 #: ckan/templates/package/related_list.html:14
 #: ckan/templates/revision/diff.html:6 ckan/templates/revision/list.html:7
 msgid "no-sidebar"
-msgstr ""
+msgstr "no-sidebar"
 
 #: ckan/templates/group/edit_form.html:10
 #: ckan/templates/group/new_group_form.html:101
