--- a/cs_CZ/LC_MESSAGES/ckan.po
+++ b/cs_CZ/LC_MESSAGES/ckan.po
@@ -6,13 +6,14 @@
 #   <elquenor@gmail.com>, 2012.
 # <klimek@ksi.mff.cuni.cz>, 2011.
 # <m.tajtl@gmail.com>, 2011.
+# Sean Hammond <sean.hammond@okfn.org>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: CKAN\n"
 "Report-Msgid-Bugs-To: http://trac.ckan.org/\n"
 "POT-Creation-Date: 2012-04-26 14:49+0200\n"
-"PO-Revision-Date: 2012-04-28 19:42+0000\n"
-"Last-Translator: kuceraj <elquenor@gmail.com>\n"
+"PO-Revision-Date: 2012-05-09 11:01+0000\n"
+"Last-Translator: Sean Hammond <sean.hammond@okfn.org>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.net/projects/p/ckan/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2144,7 +2145,7 @@ msgstr "Aktualizovat stávající role Autorizačních skupin"
 #: ckan/templates/package/related_list.html:14
 #: ckan/templates/revision/diff.html:6 ckan/templates/revision/list.html:7
 msgid "no-sidebar"
-msgstr "bez postranního panelu"
+msgstr "no-sidebar"
 
 #: ckan/templates/group/edit_form.html:10
 #: ckan/templates/group/new_group_form.html:101
