--- a/es/LC_MESSAGES/ckan.po
+++ b/es/LC_MESSAGES/ckan.po
@@ -10,13 +10,14 @@
 # <javierdcm@gmail.com>, 2012.
 # Jesús García <>, 2012.
 # okfn <sysadmin@okfn.org>, 2011.
+# Sean Hammond <sean.hammond@okfn.org>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: CKAN\n"
 "Report-Msgid-Bugs-To: http://trac.ckan.org/\n"
 "POT-Creation-Date: 2012-04-26 14:49+0200\n"
-"PO-Revision-Date: 2012-05-01 21:40+0000\n"
-"Last-Translator: amercader <amercadero@gmail.com>\n"
+"PO-Revision-Date: 2012-05-09 11:04+0000\n"
+"Last-Translator: Sean Hammond <sean.hammond@okfn.org>\n"
 "Language-Team: Spanish (Castilian) (http://www.transifex.net/projects/p/ckan/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
