--- a/pl/LC_MESSAGES/ckan.po
+++ b/pl/LC_MESSAGES/ckan.po
@@ -5,12 +5,13 @@
 # Translators:
 # <apohllo@o2.pl>, 2011, 2012.
 # okfn <sysadmin@okfn.org>, 2011.
+# Sean Hammond <sean.hammond@okfn.org>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: CKAN\n"
 "Report-Msgid-Bugs-To: http://trac.ckan.org/\n"
 "POT-Creation-Date: 2012-04-26 14:49+0200\n"
-"PO-Revision-Date: 2012-04-26 12:31+0000\n"
+"PO-Revision-Date: 2012-05-09 11:12+0000\n"
 "Last-Translator: Sean Hammond <sean.hammond@okfn.org>\n"
 "Language-Team: Polish (http://www.transifex.net/projects/p/ckan/language/pl/)\n"
 "MIME-Version: 1.0\n"
@@ -2143,7 +2144,7 @@ msgstr "Zaktualizuj istniejące role dla grup autoryzacyjnych"
 #: ckan/templates/package/related_list.html:14
 #: ckan/templates/revision/diff.html:6 ckan/templates/revision/list.html:7
 msgid "no-sidebar"
-msgstr ""
+msgstr "no-sidebar"
 
 #: ckan/templates/group/edit_form.html:10
 #: ckan/templates/group/new_group_form.html:101
