--- a/pt_BR/LC_MESSAGES/ckan.po
+++ b/pt_BR/LC_MESSAGES/ckan.po
@@ -6,12 +6,13 @@
 # Augusto Herrmann <augusto.herrmann@gmail.com>, 2011, 2012.
 # <Nitaibezerra@gmail.com>, 2011, 2012.
 # Pablo Mendes <>, 2012.
+# Sean Hammond <sean.hammond@okfn.org>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: CKAN\n"
 "Report-Msgid-Bugs-To: http://trac.ckan.org/\n"
 "POT-Creation-Date: 2012-04-26 14:49+0200\n"
-"PO-Revision-Date: 2012-04-26 12:14+0000\n"
+"PO-Revision-Date: 2012-05-09 11:27+0000\n"
 "Last-Translator: Sean Hammond <sean.hammond@okfn.org>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.net/projects/p/ckan/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -2144,7 +2145,7 @@ msgstr "Atualiza Papéis Existentes para Grupos de Autorização"
 #: ckan/templates/package/related_list.html:14
 #: ckan/templates/revision/diff.html:6 ckan/templates/revision/list.html:7
 msgid "no-sidebar"
-msgstr "nenhuma-barra-lateral"
+msgstr "no-sidebar"
 
 #: ckan/templates/group/edit_form.html:10
 #: ckan/templates/group/new_group_form.html:101
