--- a/sk/LC_MESSAGES/ckan.po
+++ b/sk/LC_MESSAGES/ckan.po
@@ -14,8 +14,8 @@ msgstr ""
 "Project-Id-Version: CKAN\n"
 "Report-Msgid-Bugs-To: http://trac.ckan.org/\n"
 "POT-Creation-Date: 2012-04-26 14:49+0200\n"
-"PO-Revision-Date: 2012-04-30 12:07+0000\n"
-"Last-Translator: Jakub Kapus <jakub.kapus@vlada.gov.sk>\n"
+"PO-Revision-Date: 2012-05-09 11:03+0000\n"
+"Last-Translator: Sean Hammond <sean.hammond@okfn.org>\n"
 "Language-Team: Slovak (http://www.transifex.net/projects/p/ckan/language/sk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2147,7 +2147,7 @@ msgstr "Aktualizovať existujúce role pre autorizačné skupiny"
 #: ckan/templates/package/related_list.html:14
 #: ckan/templates/revision/diff.html:6 ckan/templates/revision/list.html:7
 msgid "no-sidebar"
-msgstr "bez bočnej lišty"
+msgstr "no-sidebar"
 
 #: ckan/templates/group/edit_form.html:10
 #: ckan/templates/group/new_group_form.html:101
